test/type/fail/paren_type_erase_3.j
class A {
  Void main() {
    return (5) + ("asd");
  }
}
